# local-agent

./: Cargo.toml  LICENSE.md  README.md
docs/: README.html  analysis.md  index.html
src/: main.rs
src/tools/implementations/: edit_file.rs  list_files.rs  markdown_to_html.rs  mod.rs  read_file.rs  scraper.rs  search_ddg.rs
