[package]
name = "code-analysis-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
fs2 = "0.4.3"
markdown = "1.0.0-alpha.23"
ollama-rs = { version = "0.3.0", features = ["default", "stream", "headers", "macros"] }
schemars = { version = "0.8.22", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.44.2", features = ["full"] }
