[package]
name = "local-agent"
description = "A Rust-based AI assistant that leverages the Ollama API to perform file operations and Markdown conversions through natural language chat interactions."
authors = ["Josh Holt <holt.josh@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
fs2 = "0.4.3"
html2md = "0.2.15"
markdown = "1.0.0-alpha.23"
ollama-rs = { version = "0.3.0", features = ["default", "stream", "headers", "macros"] }
reqwest = "0.12.15"
schemars = { version = "0.8.22", features = ["preserve_order"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.44.2", features = ["full"] }
